# Experimental

./: LICENSE
PLA-SeedFinder/: CMakeLists.txt  Cleanup.cmd  PLA-SeedFinder.lib  PLA-SeedFinder.sln
PLA-SeedFinder/Binaries-Win32/: PLA-SeedFinder.lib
PLA-SeedFinder/Binaries-Win64/: PLA-SeedFinder.lib
PLA-SeedFinder/PLA-SeedFinder/: PLA-SeedFinder.vcxproj  PLA-SeedFinder.vcxproj.filters
PLA-SeedFinder/ProjectVSS/: Cleanup.cmd  PLA-SeedFinder.sln
PLA-SeedFinder/ProjectVSS/PLA-SeedFinder/: PLA-SeedFinder.vcxproj  PLA-SeedFinder.vcxproj.filters
PLA-SeedFinder/Source/: Compiler.h  CpuFeatures.cpp  CpuFeatures.h  CpuId.cpp  CpuId.h  DynamicParallelizer.cpp  DynamicParallelizer.h  Main.cpp  PLA-SeedFinder.cpp  PLA-SeedFinder.h  ReportCandidates.cpp  ReportCandidates.h  SeedScan.cpp  SeedScan.h  Tools.cpp  Tools.h
PLA-SeedFinder/Source/Kernels/: SeedScan_Default.cpp  SeedScan_aarch64.cpp  SeedScan_x64_AVX2.cpp  SeedScan_x64_AVX512.cpp  SeedScan_x64_SSE41.cpp  SeedScan_x86_AVX2.cpp  SeedScan_x86_AVX512.cpp  SeedScan_x86_SSE41.cpp  XoroShiro1_Default.h  XoroShiro2_SSE2.h  XoroShiro2_x86_SSE2.h  XoroShiro4_AVX2.h  XoroShiro4_x86_AVX2.h  XoroShiro8_AVX512.h  XoroShiro8_x86_AVX512.h  XoroShiro_aarch64.h
